[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Ocean/Ocean Enemies/Enemy_Seahorse.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.5, 31.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 150, 25 )

[node name="Enemy_Seahorse" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.815686, 0.988235, 0.698039, 1 )
scale = Vector2( 0.5, 1 )
texture = ExtResource( 1 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="DetectRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRange"]
position = Vector2( 165, 0 )
shape = SubResource( 2 )

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="body_entered" from="DetectRange" to="." method="_on_DetectRange_body_entered"]
[connection signal="body_exited" from="DetectRange" to="." method="_on_DetectRange_body_exited"]
